Finish log in / log out

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 #empty 
+
+arun:
+  name: Arun Rangarajan
+  email: arangarajan@college.harvard.edu
+  password_digest: <%= User.digest('password') %>
